# gaussian-tools

./: Cargo.toml  Makefile.toml
scripts/: run-xyg3.sh
src/: cli.rs  lib.rs  xdh.rs
src/cli/: cubegen.rs  log.rs  restart.rs  run.rs  xdh.rs
src/xdh/: gau.rs  gjf.rs  input.rs  output.rs
tests/files/: Job_Test008.com  Job_o2.com  Test007.gjf  Test008.gjf  o2.xDH
