[package]
name = "gaussian-tools"
version = "0.0.5"
edition = "2018"
authors = ["Wenping Guo <ybyygu@gmail.com>"]

[dependencies]
pager = "0.16"
regex = "1"
structopt = "0.3"
gut = { version = "0.1", package = "gchemol-gut" }
duct = "0.13.5"
tempfile = "3.2.0"

[dev-dependencies]


# [patch.crates-io]
# gchemol-gut = {path = "/home/ybyygu/Workspace/Programming/gchemol-rs/gut" }
