# [[file:xo-tools.note::53f67ee8][53f67ee8]]
[package]
name = "gaussian-tools"
version = "0.0.11"
edition = "2021"
authors = ["Wenping Guo <ybyygu@gmail.com>"]

[dependencies]
pager = "0.16"
regex = { version = "1" }
gut = { version = "0.4", package = "gchemol-gut" }
duct = "0.13.5"
tempfile = "3.2.0"
clap = {version="4", features = ["derive"]}

[dev-dependencies]

[patch.crates-io]
gchemol-gut = {path = "/home/ybyygu/Workspace/Programming/gchemol-rs/gut" }
# 53f67ee8 ends here
